8064749: -XX:-UseCompilerSafepoints breaks safepoint rendezvous

Reviewed-by: dcubed, coleenp, kvn, dholmes